Fixing dropdown on mobile.

--- a/src/style.css
+++ b/src/style.css
@@ -33,13 +33,11 @@ img {
     justify-content: space-between;
 }
 
-.drop {
+.drop:active {
     background-color: transparent;
-    display: flex;
     font-size: 35px;
     border: none;
     cursor: pointer;
-    outline: none;
 }
 
 .dropdown {
